2016-08-23 Philipp Klaus Krause <pkk AT spth.de>

	* src/mcs51/gen.h,
	  src/mcs51/peep.c:
	  Prepare for long long fix for deadMove() on ret.

2016-08-22 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCCsymt.c,
	  src/mcs51/gen.c,
	  support/regression/tests/gcc-torture-execute-961122-1.c,
	  support/regression/tests/gcc-torture-execute-961206-1.c,
	  support/regression/tests/gcc-torture-execute-991016-1.c,
	  support/regression/tests/gcc-torture-execute-991216-1.c,
	  support/regression/tests/gcc-torture-execute-991216-2.c,
	  support/regression/tests/gcc-torture-execute-pr20187-1.c,
	  support/regression/tests/gcc-torture-execute-pr40057.c,
	  support/regression/tests/gcc-torture-execute-pr42269-2.c,
	  support/regression/tests/gcc-torture-execute-pr42544.c,
	  support/regression/tests/test-p99-conformance.c:
	  support/regression/tests/gcc-torture-execute-20000121-1.c,
	  support/regression/tests/gcc-torture-execute-20000314-2.c,
	  support/regression/tests/gcc-torture-execute-20000412-2.c,
	  support/regression/tests/gcc-torture-execute-20000523-1.c,
	  support/regression/tests/gcc-torture-execute-20000717-2.c,
	  support/regression/tests/gcc-torture-execute-20001112-1.c,
	  support/regression/tests/gcc-torture-execute-20001221-1.c,
	  support/regression/tests/gcc-torture-execute-20060110-2.c,
	  support/regression/tests/gcc-torture-execute-20060127-1.c,
	  support/regression/tests/gcc-torture-execute-20071213-1.c,
	  support/regression/tests/gcc-torture-execute-920829-1.c,
	  support/regression/tests/gcc-torture-execute-921029-1.c,
	  support/regression/tests/gcc-torture-execute-921202-2.c,
	  support/regression/tests/gcc-torture-execute-930111-1.c:
	  More long long support for mcs51.

2016-08-21 Philipp Klaus Krause <pkk AT spth.de>

	* src/mcs51/gen.c,
	  src/mcs51/gen.h,
	  src/mcs51/ralloc.c,
	  The basics of long long support for mcs51.

2016-08-20 Philipp Klaus Krause <pkk AT spth.de>

	* doc/sdccman.lyx:
	  Fix double underscores in manual.
